# Luminus

./: .gitignore  CMakeLists.txt  Luminus.g4  LuxLang.g4  README.md  TestGrammar.g4  build_antlr_runtime.bat  build_deps.bat  build_grammar.bat  build_grammar.txt  build_llvm.bat  build_llvm.ps1  cf_viewer.sh  colors.py  install_antlr.sh  install_ps.sh  main.cpp
Luminus_Compiler/: ClassManager.h  Compiler_Error_Types.h  ErrorLogger.h  FunctionCallHelper.cpp  FunctionManager.h  FunctionVisitor.cpp  LumVisitor.h  LuminusCompiler.h  VariableManager.h  VisitAssignment.cpp  VisitFunction.cpp  VisitIdentifier.cpp  main.cpp
Luminus_Compiler/ArithmeticExpressionVisitors/: visitAdditionSubtraction.cpp
Luminus_Compiler/AssignmentVisitors/: visitDeclaration.cpp  visitInitialization.cpp
Luminus_Compiler/Basic_Checker/: CompilerErrors.h  ErrorLogger.h  LumVisitor.h  VisitArithmetic.cpp  VisitAssignment.cpp  VisitBoolExpressions.cpp  VisitFunction.cpp  VisitIdentifier.cpp
Luminus_Compiler/Basic_Checker/CompilerErrors/: DeclarationErrors.h  FunctionErrors.h  TypeErrors.h
Luminus_Compiler/HLVisitors/: visitFunctionDefinition.cpp
Luminus_Compiler/IR_Generator/: AutoCast.cpp  Definitions.h  IR_Test.h  LuminusCompiler.h  LuminusGenerator.h  StringUtils.cpp
Luminus_Compiler/IR_Generator/Compiler_Errors/: CompileException.hpp  CompilerLogger.h  TypeErrors.hpp
Luminus_Compiler/IR_Generator/Visitors_Impl/: VisitAccessInternal.cpp  VisitAdd_Sub.cpp  VisitCast.cpp  VisitConditionals.cpp  VisitDeclaration.cpp  VisitFunction.cpp  VisitFunctionCall.cpp  VisitIdentifier.cpp  VisitInitialization.cpp  VisitMod.cpp  VisitMul_Div.cpp  VisitReinitialization.cpp  VisitReturn.cpp  VisitStructDecl.cpp  VisitWhile_Statement.cpp
src/Luminus_Generated/: Luminus.interp  Luminus.tokens  LuminusBaseListener.cpp  LuminusBaseListener.h  LuminusBaseVisitor.cpp  LuminusBaseVisitor.h  LuminusLexer.cpp  LuminusLexer.h  LuminusLexer.interp  LuminusLexer.tokens  LuminusListener.cpp  LuminusListener.h  LuminusParser.cpp  LuminusParser.h  LuminusVisitor.cpp  LuminusVisitor.h
src/antlr_generated/: LuxLang.interp  LuxLangBaseListener.cpp  LuxLangBaseListener.h  LuxLangBaseVisitor.cpp  LuxLangBaseVisitor.h  LuxLangLexer.cpp  LuxLangLexer.h  LuxLangLexer.interp  LuxLangLexer.tokens  LuxLangListener.cpp  LuxLangListener.h  LuxLangParser.cpp  LuxLangParser.h  LuxLangVisitor.cpp  LuxLangVisitor.h
src/for_grun/: LuxLang.interp  LuxLang.tokens  LuxLangBaseListener.java  LuxLangLexer.interp  LuxLangLexer.java  LuxLangListener.java  LuxLangParser.java
test_grammars/: main.lm  max.lm  min.lm
